Fix spacing and extract EpigramView

--- a/src/renderer/app.global.css
+++ b/src/renderer/app.global.css
@@ -2,4 +2,6 @@
 
 body {
   background-color: #FAFAFA;
+  margin: 0;
+  padding: 0;
 }
